chore: honor PORT env for backend

--- a/zeabur.toml
+++ b/zeabur.toml
@@ -5,7 +5,7 @@ name = "crypto-psychiatrist"
 name = "backend"
 dir = "backend"
 type = "python"
-command = "uvicorn main:app --host 0.0.0.0 --port 8080"
+command = "sh -c 'uvicorn main:app --host 0.0.0.0 --port ${PORT:-8080}'"
 
 [[services]]
 name = "frontend"
