--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.115.0
 uvicorn[standard]==0.32.0
 pandas==2.2.3
+numpy==2.0.0
 google-generativeai==0.8.3
 python-dotenv==1.0.1
 python-multipart
